tests/snapshots/unicode_edge_cases_test__alternating_ascii_unicode.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 1

Buffer:
a世b界c
