tests/snapshots/unicode_edge_cases_test__arabic_text.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:2
Lines: 2

Buffer:
مر[ح]با
