tests/snapshots/unicode_edge_cases_test__change_unicode_word.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:10
Lines: 2

Buffer:
hello worl[d] test
