tests/snapshots/unicode_edge_cases_test__combining_multiple.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
a[̀]̃
