tests/snapshots/unicode_edge_cases_test__decomposed.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test2.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
cafe[́]
