tests/snapshots/unicode_edge_cases_test__dollar_with_unicode.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:7
Lines: 2

Buffer:
hello 世[界]
