tests/snapshots/unicode_edge_cases_test__emoji_delete.snap
---
source: tests/unicode_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:5
Lines: 2

Buffer:
test [ ]test
